# libgtoint

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  _config.yml
.github/workflows/: testing.yml
src/: array.c  array.h  basis.c  cache-ecp0.c  cache-ecp1.c  cache-ecp2-w.c  cache-ecp2.c  cache-eri.c  cache-kei.c  cache-mmi.c  cache-nai.c  cache-oi.c  cache.c  cache.h  ecp.c  function-bessel.c  function-boys.c  function.c  function.h  gtoint-fortran.f90  gtoint-private.h  gtoint.h  index.h  integral-ecp-1-0.c  integral-ecp-1-1.c  integral-ecp-1-2.c  integral-ecp-2-angular.c  integral-ecp-2-radial.c  integral-ecp-2-spherical.c  integral-ecp-2.c  integral-ecp-2.h  integral-ecp.c  integral-eri.c  integral-kei.c  integral-mmi.c  integral-nai.c  integral-oi.c  integrator.c  spherical.c  spherical.h  (+3 more)
tests/: CMakeLists.txt  test-function-bessel.c  test-function-boys.c  test-integral-ecp-1-0.c  test-integral-ecp-1-1-cartesian.c  test-integral-ecp-1-1.c  test-integral-ecp-1-2-cartesian.c  test-integral-ecp-1-2.c  test-integral-ecp-2-0-cartesian.c  test-integral-ecp-2-1-cartesian.c  test-integral-ecp-2-2-cartesian.c  test-integral-ecp-2.c  test-integral-ecp-cartesian.c  test-integral-ecp-spherical.c  test-integral-eri.c  test-integral-kei-cartesian.c  test-integral-kei-spherical.c  test-integral-kei.c  test-integral-mmi.c  test-integral-nai-cartesian.c  test-integral-nai-spherical.c  test-integral-nai.c  test-integral-oi-cartesian.c  test-integral-oi-spherical.c  test-integral-oi.c  test-integral-w-ecp-1-0.c  test-integral-w-ecp-1-1.c  test-integral-w-ecp-1-2.c  test-integral-w-ecp-2.c  test-integral-w-eri.c  test-integral-w-kei.c  test-integral-w-mmi.c  test-integral-w-nai.c  test-integral-w-oi.c  test-interface-fortran.f90  test-nan.c  test-spherical.c
